Fix Sonar complains
- increment test coverage

Issue-ID: OAM-215
